tests/NormalTests/paczka1/small_fuzzy/20720170.err
Error in line 9: zPjJso97 S98^ 33,7
Error in line 3: 3r3KR S986 79,5
